Cleans up post CSS
- Changes `post_header` class to be `post_heading`, to be consistent
with the `summary_heading` and be more semantically correct.
- Changes the `post_dek` to paragraph, because that’s what it is.
- Fixes typo in cheat sheet.
- Includes elements in cheat sheet and fixes structural issues and
missing elements from the cheat sheet.

--- a/_includes/article.html
+++ b/_includes/article.html
@@ -33,13 +33,13 @@
             {%- import "category-slug.html" as category_slug %}
             {{ category_slug.render(post.category.0, path, 'post_slug') }}
         {% endif %}
-        <h1 class="post_header">
+        <h1 class="post_heading">
             {{ post.title|safe }}
         </h1>
     {% if post.dek %}
-        <div class="post_dek">
+        <p class="post_dek">
             {{ post.dek|safe }}
-        </div>
+        </p>
     {% endif %}
         <div class="post_meta">
         {% if post.author.0 %}
