--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -14081,18 +14081,16 @@ a.focus .summary_event-date {
                     <span class="u-visually-hidden">Category:</span>
                     Announcements &amp; updates
                 </a>
-                <h1 class="post_header">
+                <h1 class="post_heading">
                     A consumer-centered supervision program
                 </h1>
-                <div class="post_dek">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing
-                        elit. Quis architecto commodi cupiditate excepturi
-                        consequatur sequi quia consectetur est ea laborum
-                        saepe earum quidem a necessitatibus modi magni error
-                        ab suscipit.
-                    </p>
-                </div>
+                <p class="post_dek">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing
+                    elit. Quis architecto commodi cupiditate excepturi
+                    consequatur sequi quia consectetur est ea laborum
+                    saepe earum quidem a necessitatibus modi magni error
+                    ab suscipit.
+                </p>
                 <div class="post_meta">
                     <span class="post_byline">
                         By <a href="#">Firstname&nbsp;Lastname</a> &ndash;
@@ -14410,31 +14408,36 @@ a.focus .summary_event-date {
                             </a>
                         </li>
                     </ul>
-                </div> 
+                </div>
             </footer>
         </article>
       codenotes:
         - |
-          Structural sheat sheet:
+          Structural cheat sheet:
           -----------------------
-          .post
-            .post_slug
-            .post_header
-            .post_dek
-            .post_meta
-              .post_byline
-              .post_date
-            .post_share-icon
-            .post_featured-img
-            .post_body
-            .post_inset
+          article.post
+            header
+                a.post_slug
+                h1.post_heading
+            p.post_dek
+            div.post_meta
+              span.post_byline
+              span.post_date
+            aside
+              ul.post_share
+                li.list_item
+                  a.share-icon
+            img.post_featured-img
+            div.post_body
+              aside.post_inset
+            footer
       notes:
         - ".post_featured-img uses a 16:9 aspect ratio."
   tags:
     - cfgov-post
 */
 
-.post_header {
+.post_heading {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -14445,31 +14448,31 @@ a.focus .summary_event-date {
   margin-bottom: 0.5em;
 }
 
-.post_header em,
-.post_header i {
+.post_heading em,
+.post_heading i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
 
-.lt-ie9 .post_header em,
-.lt-ie9 .post_header i {
+.lt-ie9 .post_heading em,
+.lt-ie9 .post_heading i {
   font-style: normal !important;
 }
 
-.post_header strong,
-.post_header b {
+.post_heading strong,
+.post_heading b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
 
-.lt-ie9 .post_header strong,
-.lt-ie9 .post_header b {
+.lt-ie9 .post_heading strong,
+.lt-ie9 .post_heading b {
   font-weight: normal !important;
 }
 
-.post_header {
+.post_heading {
   font-family: "AvenirNextLTW01-Regular", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -14480,27 +14483,27 @@ a.focus .summary_event-date {
   margin-bottom: 0.29411765em;
 }
 
-.post_header em,
-.post_header i {
+.post_heading em,
+.post_heading i {
   font-family: "AvenirNextLTW01-Italic", Arial, sans-serif;
   font-style: italic;
   font-weight: normal;
 }
 
-.lt-ie9 .post_header em,
-.lt-ie9 .post_header i {
+.lt-ie9 .post_heading em,
+.lt-ie9 .post_heading i {
   font-style: normal !important;
 }
 
-.post_header strong,
-.post_header b {
+.post_heading strong,
+.post_heading b {
   font-family: "AvenirNextLTW01-Demi", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
 }
 
-.lt-ie9 .post_header strong,
-.lt-ie9 .post_header b {
+.lt-ie9 .post_heading strong,
+.lt-ie9 .post_heading b {
   font-weight: normal !important;
 }
 
@@ -14548,6 +14551,16 @@ a.focus .summary_event-date {
 
 .post_body {
   color: #43484e;
+}
+
+.post_body:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.lt-ie8 .post_body {
+  zoom: 1;
 }
 
 .post_inset {
