--- a/_includes/email-subscribe-form.html
+++ b/_includes/email-subscribe-form.html
@@ -8,15 +8,32 @@
       enctype="application/x-www-form-urlencoded">
 
     <div class="form-group">
-        <label class="u-visually-hidden" for="email-subscribe-form_email">
+        <label for="email-subscribe-form_email">
             Email address
         </label>
         <input class="reveal-on-focus_target"
                id="email-subscribe-form_email"
                type="email"
                name="email"
-               placeholder="Your email">
+               placeholder="example@mail.com">
     </div>
+    {# Uncomment this and remove condition to test
+    {% if 'is_event' %}
+    <div class="form-group reveal-on-focus_content u-clearfix">
+      <label class="form-group_item">
+        <input class="custom-input"
+               type="checkbox"
+               name="email-subscribe-form_zip-only"
+               value="limit_event_area">
+               Only events near my ZIP code
+      </label>
+      <label for="email-subscribe-form_zip-code">Zip code</label>
+      <input type="text"
+              name="email-subscribe-form_zip-code"
+              placeholder="00000">
+    </div>
+    {% endif %}
+    #}
     {% if query -%}
     <div class="form-group reveal-on-focus_content u-clearfix">
     {% for category in query.possible_values_for('category')|sort(attribute='term') -%}
@@ -51,7 +68,7 @@
                value="{{ code }}">
     </div>
     {% endif -%}
-    
+
     <div class="form-group">
         <input class="btn" type="submit" class="btn" value="Sign up">
     </div>
