--- a/static/css/main.less
+++ b/static/css/main.less
@@ -119,6 +119,7 @@
 
 @import (less) "beta.less";
 @import (less) "budget.less";
+@import (less) "event.less";
 @import (less) "bureau.less";
 @import (less) "bureau-structure.less";
 @import (less) "contact-us.less";
