--- a/static/css/event.less
+++ b/static/css/event.less
@@ -77,10 +77,10 @@
     &_banner {
         padding: 15px 20px;
 
-        background-color: #eee;
+        background-color: @gray-5;
 
         .respond-to-min(600px, {
-            border-bottom: 1px solid #aaa;
+            border-bottom: 1px solid @gray-50;
         });
     }
 
